refactor: adding ConfigModule

--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@nestjs/typeorm": "^10.0.2",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "i": "^0.3.7",
+    "joi": "^17.13.3",
     "mysql2": "^3.11.4",
+    "npm": "^10.9.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
